# VisionTracker

./: README.md
DabriusStreamer/DabriusStreamer/: Tracker.swift
DabriusStreamer/DabriusStreamerTests/: DabriusStreamerTests.swift
LeRobotVP/LeRobotVP/: ContentView.swift
LeRobotVP/LeRobotVP.xcodeproj/: project.pbxproj
LeRobotVP/LeRobotVP/Networking/: ControlClient.swift
Mediapipe/: mediapipe_leader_arm.py  test_lerobot.py
VP_Tracker/: README.md  visionpro_receiver.py
VP_Tracker/DabriusStreamer/DabriusStreamer/: ContentView.swift  DabriusApp.swift  PoseMath.swift  StreamServer.swift  Tracker.swift
VP_Tracker/DabriusStreamer/DabriusStreamer.xcodeproj/: project.pbxproj
VP_Tracker/dabrius/: pyproject.toml
VP_Tracker/dabrius/src/dabrius/: __init__.py  mapping.py  teleop.py
VP_Tracker/dabrius/src/dabrius.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
VisionPro/: README.md
VisionPro/LeRobotVP/: SectionCard.swift
VisionPro/LeRobotVP/LeRobotVP/: DiscoveryView.swift  Info.plist.snippet.xml  LeRobotVPApp.swift  StreamerView.swift
VisionPro/LeRobotVP/LeRobotVPTests/: LeRobotVPTests.swift
VisionPro/python_teleop/: control_server.py  mdns_advertise.py  pyproject.toml  run_with_lerobot_cli.sh
VisionPro/python_teleop/lerobot_teleoperator_vpro/: __init__.py  config_vpro.py  vpro.py
VisionTrackerStreamer/VisionTrackerStreamer/: PoseMath.swift  StreamServer.swift  Tracker.swift  VisionTrackerApp.swift
VisionTrackerStreamer/VisionTrackerStreamer.xcodeproj/: project.pbxproj
VisionTrackerStreamer/VisionTrackerStreamerTests/: VisionTrackerStreamerTests.swift
dabrius/: README.md
dabrius/src/dabrius/: cli.py  client.py  safety.py
dabrius/src/dabrius.egg-info/: PKG-INFO
visiontracker/: README.md  pyproject.toml
visiontracker/src/visiontracker/: cli.py  client.py  schemas.py  teleop.py
(+7 files in other folders)
