[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dabrius"
version = "0.1.0"
description = "Vision Pro tracking client + LeRobot teleoperation utilities"
readme = ""
authors = [{name="Darius Giannoli and Gabriel Taieb", ", email="darius.giannoli@epfl.ch, gabriel.taieb@epfl.ch"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "websockets>=12.0",
  "lerobot",
]

[project.scripts]
dabrius-teleop = "dabrius.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
